--- a/cli/package.json
+++ b/cli/package.json
@@ -24,7 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "@microrealestate/common": "*",
-    "chalk": "4.1.2",
+    "chalk": "^5.3.0",
     "clear": "0.1.0",
     "clui": "0.3.6",
     "dotenv": "16.0.1",
